# asset-analyst

./: .env.example  .gitignore  pyproject.toml
src/asset_analyst/: run.py
src/asset_analyst/LLMs/: ai_factory.py  interface.py  model_enums.py
src/asset_analyst/LLMs/ai_models/: anthropic.py  google_gen_ai.py  groq_ai.py  open_ai.py
src/asset_analyst/agents/: __init__.py  analysis.py  data_gathering.py  supervisor.py
src/asset_analyst/configs/: config_enum.py  config_init.py
src/asset_analyst/schemas/: __init__.py  investment.py  prompts.py
src/asset_analyst/tools/: web_search.py
